added extjs client

--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,8 @@
 
     
     <div class="hero-unit">
-        <h1>Hello!</h1>
-        <p>You now have</p>
-        <ul>
-            <li>HTML5 Boilerplate</li>
-        </ul>
+        <h2>Hello!</h2>
+        <p><a href="clients/">go to clients</a></p>
     </div>
     
 
