added timezone samp

--- a/app/clients/index.html
+++ b/app/clients/index.html
@@ -11,6 +11,7 @@
 <h2>clients</h2>
 <a href="sample-1">sample-1</a><br/>
 <a href="extjs-gizmos">extjs-gizmos</a><br/>
+<a href="tzone-map-1">tzone-map-1</a><br/>
 </body>
 
 </html>
