added tzone-map-2 and updated index for all clients

--- a/app/clients/index.html
+++ b/app/clients/index.html
@@ -11,7 +11,9 @@
 <h2>clients</h2>
 <a href="sample-1">sample-1</a><br/>
 <a href="extjs-gizmos">extjs-gizmos</a><br/>
+<a href="timezones-1">timezones-1</a><br/>
 <a href="tzone-map-1">tzone-map-1</a><br/>
+<a href="tzone-map-2">tzone-map-2</a><br/>
 </body>
 
 </html>
