--- a/app/clients/tzone-map-2/index.html
+++ b/app/clients/tzone-map-2/index.html
@@ -4,7 +4,6 @@
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-
 		<link rel="stylesheet" href="css/style.css">
 
 		<title>Moment Timezone page</title>
@@ -28,10 +27,12 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<script src="js/global.js"></script>
+<!-- <script src="js/global.js"></script> -->
+
+<script src="../momentjss/moment.js"></script>
+<script src="../momentjss/moment-timezone-with-data-2010-2020.js"></script>
 		
 <script src="js/timezone-home.js"></script>
-	
 
 </body>
 </html>
