--- a/app/clients/tzone-map-2/index.html
+++ b/app/clients/tzone-map-2/index.html
@@ -4,7 +4,10 @@
 <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/style.css">
+		<!-- <link rel="stylesheet" href="css/dumps.css"> -->
+		<link rel="stylesheet" href="css/page-moment.css">
+		<link rel="stylesheet" href="css/locales.css">
+		<link rel="stylesheet" href="css/map.css">
 
 		<title>Moment Timezone page</title>
 </head>
