added blogpost jq plugin

--- a/app/clients/index.html
+++ b/app/clients/index.html
@@ -14,6 +14,9 @@
 <a href="timezones-1">timezones-1</a><br/>
 <a href="tzone-map-1">tzone-map-1</a><br/>
 <a href="tzone-map-2">tzone-map-2</a><br/>
+<a href="jquery-blogpost">jquery-blogpost</a><br/>
+<a href="sample-1">.</a><br/>
+
 </body>
 
 </html>
