took out locale

--- a/app/clients/tzone-map-2/index.html
+++ b/app/clients/tzone-map-2/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<!-- <link rel="stylesheet" href="css/dumps.css"> -->
 		<link rel="stylesheet" href="css/page-moment.css">
-		<link rel="stylesheet" href="css/locales.css">
+		<!-- <link rel="stylesheet" href="css/locales.css"> -->
 		<link rel="stylesheet" href="css/map.css">
 
 		<title>Moment Timezone page</title>
