--- a/app/clients/extjs-mycomp-1/index.html
+++ b/app/clients/extjs-mycomp-1/index.html
@@ -7,11 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/resources/css/ext-all-neptune.css">
 	<link rel="stylesheet" href="sample.css">
+
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/ext-all.js"></script>
 </head>
 
 <body>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/ext-all.js"></script>
-	<script type="text/javascript" src="mycomp1.js"></script>
+	
+	<script type="text/javascript" src="./svm/mycomp2.js"></script>
+	<script type="text/javascript" src="./svm/mycomp1.js"></script>
 	<script src="sample.js"></script>
 </body>
 
