more component samps

--- a/app/clients/extjs-mycomp-1/index.html
+++ b/app/clients/extjs-mycomp-1/index.html
@@ -14,6 +14,8 @@
 <body>
 	
 	<script type="text/javascript" src="./svm/mycomp2.js"></script>
+	<script type="text/javascript" src="./svm/mycomp3.js"></script>
+	<script type="text/javascript" src="./svm/mysample.js"></script>
 	<script type="text/javascript" src="./svm/mycomp1.js"></script>
 	<script src="sample.js"></script>
 </body>
