--- a/app/clients/extjs-mycomp-2/index.html
+++ b/app/clients/extjs-mycomp-2/index.html
@@ -6,6 +6,7 @@
 	<title>extjs-mycomp-1</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/resources/css/ext-all-neptune.css">
+    <link rel="stylesheet" href="svm/twoimages.css">
 	<link rel="stylesheet" href="sample.css">
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/4.2.1/ext-all.js"></script>
