added new image

--- a/app/clients/extjs-imageviewer/index.html
+++ b/app/clients/extjs-imageviewer/index.html
@@ -11,7 +11,8 @@
                     layout: 'fit',
                     items: Ext.create('ImageViewer', {
                         renderTo: Ext.getBody(),
-                        src: 'resources/images/image.png'
+                        // src: 'resources/images/image.png'
+                        src: 'resources/images/smiley.png'
                     })
                 });
             });
