sample to test chrome dev tools

--- a/app/clients/sample-21/index.html
+++ b/app/clients/sample-21/index.html
@@ -17,6 +17,7 @@
 
 	<script src="../../bower_components/jquery/dist/jquery.js"></script>
 	<script src="sample.js"></script>
+	<script src="sample2.js"></script>
 </body>
 
 </html>
