added bunch of changes and good updates

--- a/app/clients/interactjs-1/index.html
+++ b/app/clients/interactjs-1/index.html
@@ -89,9 +89,18 @@
     <div id="box-Z" class="draggable">  
         <div class="letter-inside"> Z </div>
     </div>
-		<div id="box-space" class="draggable">  
-        <div class="letter-inside a-space"> _ </div>
+		<div id="box-Apos" class="draggable">  
+        <div class="letter-inside"> ' </div>
     </div>
+		<div id="box-space" class="draggable">  
+	    	<div class="letter-inside a-space"> _ </div>
+	  </div>
+		<div id="images" class="extras">  
+	        <img src="images/image104.png" alt="Images" class="icon-image"/>
+	  </div>
+		<div id="lessonmode" class="extras">  
+	        <img src="images/lesson-100.png" alt="Lesson Mode" class="icon-image"/>
+	  </div>
 		<div id="info" class="extras"> 
 			<img src="images/info-105-512.png" alt="Speak" class="icon-image"/>
 		</div>
@@ -99,11 +108,11 @@
 			<img src="images/023_068_023_broom_clear_clean_tool-512.png" alt="Speak" class="icon-image"/>
 		</div>  
 		<div id="box-voice" class="voice extras">  
-        <img src="images/Voice-512.png" alt="Speak" class="icon-image"/>
-    </div>
+	    <img src="images/Voice-512.png" alt="Speak" class="icon-image"/>
+	  </div>
 
-    <div id="dropzone" class="dropzone"> </div>
-		
+	  <div id="dropzone" class="dropzone"> </div>
+			
 		<div id="imagezone" class="imagezone"> 
 			<img id="zone-image"/>
 		</div>
@@ -111,6 +120,9 @@
 		<div id="messagezone" class="messagezone">
 			<div class="messaging">messages.</div>
 		</div>
+	
+		<div id="leftplate" class="plate"> </div>
+		<div id="rightplate" class="plate"> </div>
 
     </div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
